# exokernel

./: .gitignore  .replit  CMakeLists.txt  LICENSE  Makefile  README.md  bochslog.txt  bochsrc.txt  boot_os.sh  package-lock.json  package.json  replit.nix  run_os_bochs.sh  run_os_qemu.sh  svelte.config.js  windi.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  website.yml
boot/: build_fonts.sh  grub.cfg
boot/exo-theme/: theme.txt
boot/fonts/: UbuntuMono16.pf2  UbuntuMono32.pf2  UbuntuMonoBold16.pf2  VT323.pf2
configure-hd/: fdisk_script  generate_hdd.sh
designdoc/: DESIGN.md
kernel/: entry.asm  kernel.mk  link.ld
kernel/arch/i386/: common_exceptions.c  common_exceptions.h  compat_checks.c  compat_checks.h  entry.asm  gdt.asm  gdt.c  gdt.h  idt.asm  idt.c  idt.h  kmain.c  multiboot_header.inc  ports.asm  ports.h
kernel/common/: multiboot2.inc  packed_struct.h
kernel/driver/serial/: serial.c  serial.h
kernel/driver/vga/: vga.c  vga.h
runtime/: CMakeLists.txt  runtime.mk
runtime/include/: locale.h  null.h  size_t.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
runtime/src/: stdio.c  stdlib.c  string.c
runtime/src/asm/i386/: crt0.asm
runtime/tests/: main.c  strlen-test.c  testlog.c  tests.h
src/routes/: +layout.svelte  +page.svelte  Footer.svelte  Header.svelte  styles.css
test_suite/hello_world/: hello_world.c
